Refatorando codigo
